k8s/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: pt232/checkout-service
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: 500m
