k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        tier: application
    spec:
      containers:
        - name: frontend
          image: pt232/frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: 500m
