k8s/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: shipping
          image: pt232/shipping-service
          ports:
            - containerPort: 8082
