k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart
  ports:
    - port: 8081
      targetPort: 8081
