k8s/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
spec:
  selector:
    app: checkout
  ports:
    - port: 8083
      targetPort: 8083
