k8s/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping
  ports:
    - port: 8082
      targetPort: 8082
