k8s/gca-ingress.yaml
# Ingress as en Entrypoint for the Application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gca-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gca-shop.local
      http:
        paths:
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 8080
          - path: /api/v1/cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 8081
          - path: /api/v1/shipping
            pathType: Prefix
            backend:
              service:
                name: shipping-service
                port:
                  number: 8082
          - path: /api/v1/checkout
            pathType: Prefix
            backend:
              service:
                name: checkout-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
