k8s/gca-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gca-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: application
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: application
